k8s 部署文件（腾讯云）（2023-05-11更新）/all-0511/ingress-myapp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-myapp-deploy-v2
  name: nginx-myapp-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-myapp-v2
  template:
    metadata:
      labels:
        app: nginx-myapp-v2
    spec:
      containers:
      - name: nginx
        image: ikubernetes/myapp:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-v2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-myapp-v2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-test-v2
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: www.ykingress2.com
    http:
      paths:
      - path: /
        backend:
          service: 
            name: nginx-svc-v2
            port:
              number: 80
        pathType: Prefix
